add app.js to display the share links

--- a/index.html
+++ b/index.html
@@ -26,21 +26,24 @@
   it felt slightly bare and uninviting. I’ve got some simple tips 
   to help you make any room feel complete.</p>
     <div class="footer">
-      <div class="footer_image"></div>
+      <div class="footer_left">
+           <div class="footer_image"></div>
 
       <div class="footer_informations">
         <h2 class="author">Michelle Appleton</h2>
         <h3 class="date">28 Jun 2020</h3>
       </div>
+      </div>
 
-      <div class="button_share"></div>
+  
+      <div class="button_share" id="button_share" onclick="myFunction()"></div>
 
       <div class="links">
         <p class="links_text">Share</p>
         <div class="links_icon__01"></div>
         <div class="links_icon__02"></div>
         <div class="links_icon__03"></div>
-        <div class="button_share"></div>
+        <div class="button_share_bis"></div>
       </div>
     </div>
     </div>
